# FastCrud

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  settings.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/main/versions/: 2025_02_12_1522-8efba66f1dc9_devices.py
src/: main.py
src/app/api/controllers/: auth_controller.py  routes.py  user_controller.py
src/app/api/schema/: auth_schema.py  user_schema.py
src/app/api/schema/shared/: entities.py  filtering.py  sorting.py
src/app/core/: identity.py
src/app/core/models/main/: device.py
src/app/core/services/: auth_service.py
src/system/: pagination.py  query_builder.py  settings.py
src/system/authentication/: settings.py
src/system/logging/: api_logger.py
